p1_13_1/src/dd/BwyGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. BwyGrammar.java */
package dd;
import utils.*;
public class BwyGrammar/*@bgen(jjtree)*/implements BwyGrammarTreeConstants, BwyGrammarConstants {/*@bgen(jjtree)*/
  protected JJTBwyGrammarState jjtree = new JJTBwyGrammarState();VariableNameGenerator namegivener=new VariableNameGenerator();
  public  static  QTTable mytable=new QTTable();
  public static SymTab mySymTab =new SymTab ();
  public static void main(String args [])
  {
    System.out.println("Reading from standard input...");
    System.out.print("Enter an expression like \u005c"1+(2+3)*var;\u005c" :");
    BwyGrammar t=new BwyGrammar(System.in);
    try
    {
      SimpleNode n = t.Start();
      n.dump("");
      System.out.println("Thank you.");
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

/* bwy part */
  final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Program();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Program() throws ParseException {
 /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LC);
      jj_consume_token(RC);
      jj_consume_token(LB);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case CHAR:
        case BYTE:
        case SHORT:
        case INT:
        case LONG:
        case FLOAT:
        case DOUBLE:
        case IF:
        case WHILE:
        case LB:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        StatementBlock();
      }
      jj_consume_token(RB);
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
       System.out.print("\u005ct\u005ct\u005ctAccepted \u005cn");
       //
       //Ô¤Áô

    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void StatementBlock() throws ParseException {
 /*@bgen(jjtree) StatementBlock */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case CHAR:
      case BYTE:
      case SHORT:
      case INT:
      case LONG:
      case FLOAT:
      case DOUBLE:
      case IF:
      case WHILE:
      case IDENTIFIER:
        statement();
        break;
      case LB:
        jj_consume_token(LB);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BOOLEAN:
          case CHAR:
          case BYTE:
          case SHORT:
          case INT:
          case LONG:
          case FLOAT:
          case DOUBLE:
          case IF:
          case WHILE:
          case LB:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
          StatementBlock();
        }
        jj_consume_token(RB);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
        if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void statement() throws ParseException {
 /*@bgen(jjtree) statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
        loopStatement();
        break;
      case BOOLEAN:
      case CHAR:
      case BYTE:
      case SHORT:
      case INT:
      case LONG:
      case FLOAT:
      case DOUBLE:
      case IDENTIFIER:
        seqStatement();
        break;
      case IF:
        conStatement();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void loopStatement() throws ParseException {
 /*@bgen(jjtree) loopStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTLOOPSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);int tag=QTInfo.innerIdSeqen;

  int tag2;
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LC);
      BoolStatement();
    mytable.PullBack(QTInfo.innerIdSeqen-1,QTInfo.innerIdSeqen+1);
    tag2=QTInfo.innerIdSeqen;
      jj_consume_token(RC);
      StatementBlock();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
       mytable.addQTInfo(new QTInfo("J","_","_",tag+1));
        //System.out.print(QTInfo.innerIdSeqen );
        mytable.PullBack(tag2,QTInfo.innerIdSeqen+1);
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
       }
       {if (true) throw (Error)jjte000;}
    } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
    }
  }

  final public void BoolStatement() throws ParseException {
 /*@bgen(jjtree) BoolStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);int tag;
    try {
      BoolAndExpression();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
      tag=QTInfo.innerIdSeqen;
     // System.out.print("!"+QTInfo.innerIdSeqen );
       mytable.PullBack( tag ,tag+1);
        jj_consume_token(OR);
        BoolAndExpression();
      mytable.get_sp(QTInfo.innerIdSeqen-1  ).result=Integer.toString( tag-1);
      tag=QTInfo.innerIdSeqen;
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void BoolAndExpression() throws ParseException {
 /*@bgen(jjtree) BoolAndExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLANDEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);int tag;
    try {
      if (jj_2_1(2)) {
        jj_consume_token(LB);
        BoolStatement();
        jj_consume_token(RB);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LC:
        case INTEGER_LITERAL:
        case IDENTIFIER:
          ConExpression();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
       tag=QTInfo.innerIdSeqen;
       // System.out.print("!"+QTInfo.innerIdSeqen );
      mytable.PullBack(QTInfo.innerIdSeqen-1,QTInfo.innerIdSeqen+1);
        jj_consume_token(AND);
        if (jj_2_2(2)) {
          jj_consume_token(LB);
          BoolStatement();
          jj_consume_token(RB);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LC:
          case INTEGER_LITERAL:
          case IDENTIFIER:
            ConExpression();
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
    mytable.get_sp(QTInfo.innerIdSeqen).result=Integer.toString(tag);
      tag = QTInfo.innerIdSeqen;
         System.out.print("!"+QTInfo.innerIdSeqen );
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void conStatement() throws ParseException {
 /*@bgen(jjtree) conStatement */
   SimpleNode jjtn000 = new SimpleNode(JJTCONSTATEMENT);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);int tag1,tag2=0;
   int haselse=0;
    try {
      jj_consume_token(IF);
      jj_consume_token(LC);
      BoolStatement();
      jj_consume_token(RC);
         tag1=QTInfo.innerIdSeqen;
     mytable.PullBack(QTInfo.innerIdSeqen-1,QTInfo.innerIdSeqen+1);
      StatementBlock();

      if (jj_2_3(2)) {
        jj_consume_token(ELSE);
              haselse=1;
              tag2=QTInfo.innerIdSeqen;
              System.out.println(QTInfo.innerIdSeqen);
              mytable.addQTInfo(new QTInfo("J","_","_",0));
        StatementBlock();
      } else {
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
       if(haselse==0)
    mytable.PullBack(tag1,QTInfo.innerIdSeqen-1);

   else {

        mytable.PullBack(tag1 , QTInfo.innerIdSeqen+1);
        mytable.get_sp(tag2+1).result=Integer.toString(QTInfo.innerIdSeqen+1);

      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void ConExpression() throws ParseException {
 /*@bgen(jjtree) ConExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTCONEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String fisrt=null,second=null;
  Token op=null;
  int tag;
    try {
      fisrt = Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
      case LT:
      case EQ:
      case LE:
      case GE:
      case NE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GT:
          op = jj_consume_token(GT);
          break;
        case LT:
          op = jj_consume_token(LT);
          break;
        case GE:
          op = jj_consume_token(GE);
          break;
        case LE:
          op = jj_consume_token(LE);
          break;
        case EQ:
          op = jj_consume_token(EQ);
          break;
        case NE:
          op = jj_consume_token(NE);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        second = Expression();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
    if(op==null) mytable.addQTInfo(new QTInfo("Jnz",fisrt,"_",QTInfo.innerIdSeqen+3));
    else mytable.addQTInfo(new QTInfo("J"+op.image,fisrt,second,QTInfo.innerIdSeqen+3));
    mytable.addQTInfo(new QTInfo("J","_","_",-1));
    } catch (Throwable jjte000) {
        if (jjtc000) {
          jjtree.clearNodeScope(jjtn000);
          jjtc000 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte000 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte000;}
        }
        if (jjte000 instanceof ParseException) {
          {if (true) throw (ParseException)jjte000;}
        }
        {if (true) throw (Error)jjte000;}
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
  }

  final public void seqStatement() throws ParseException {
 /*@bgen(jjtree) seqStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTSEQSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case CHAR:
      case BYTE:
      case SHORT:
      case INT:
      case LONG:
      case FLOAT:
      case DOUBLE:
        decStatement();
        break;
      case IDENTIFIER:
        assStatement();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(59);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void decStatement() throws ParseException {
 /*@bgen(jjtree) decStatement */
 SimpleNode jjtn000 = new SimpleNode(JJTDECSTATEMENT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token stype;
 Token sid;

 int demons=0;
 Token demon1=new Token();
 Token demon2=new Token();
 demon1.image="0";
 demon2.image="0";
    try {
      stype = type();
      sid = Identifier_dec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LM:
        jj_consume_token(LM);
        demon1 = Integer();
        jj_consume_token(RM);
                                   demons ++;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LM:
          jj_consume_token(LM);
          demon2 = Integer();
          jj_consume_token(RM);
                                 demons ++;
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
         if(demons!=0)
         { ArrayInfo arrinfo=new  ArrayInfo(stype.image, sid.image,
          "beginLine :"+ sid.beginLine+" beginColumn "+sid.beginColumn+" ",
          demons, Integer.parseInt(demon1.image)   ,   Integer.parseInt(demon2.image));
         demons=0;
         demon1.image="0";
         demon2.image="0";
              mySymTab.addArrInfo(arrinfo);
         }
         else {
            SymInfo syminfo=new  SymInfo(stype.image,sid.image,"beginLine :"+ sid.beginLine+" beginColumn "+sid.beginColumn+" ");
            mySymTab.addSymInfo(syminfo);
         }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 60:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(60);
        sid = Identifier_dec();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LM:
          jj_consume_token(LM);
          demon1 = Integer();
          jj_consume_token(RM);
                                 demons ++;
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LM:
            jj_consume_token(LM);
            demon2 = Integer();
            jj_consume_token(RM);
                                 demons ++;
            break;
          default:
            jj_la1[14] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
            if(demons!=0)
         { ArrayInfo arrinfo2=new  ArrayInfo(stype.image, sid.image,
          "beginLine :"+ sid.beginLine+" beginColumn "+sid.beginColumn+" ",
          demons, Integer.parseInt(demon1.image)   ,   Integer.parseInt(demon2.image));
         demons=0;
         demon1.image="0";
         demon2.image="0";
              mySymTab.addArrInfo(arrinfo2);
         }
         else {
            SymInfo syminfo2=new  SymInfo(stype.image,sid.image,"beginLine :"+ sid.beginLine+" beginColumn "+sid.beginColumn+" ");
            mySymTab.addSymInfo(syminfo2);
         }
      }
    } catch (Throwable jjte000) {
       if (jjtc000) {
         jjtree.clearNodeScope(jjtn000);
         jjtc000 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte000 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte000;}
       }
       if (jjte000 instanceof ParseException) {
         {if (true) throw (ParseException)jjte000;}
